# lab_riddler_tracks

./: README.md  db.sqlite3  pyproject.toml
example_site/: settings.py  urls.py
riddle_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
riddle_app/migrations/: 0001_initial.py  0002_alter_riddle_likes.py  0003_rename_category_riddle_difficulty.py
riddle_app/static/: style.css
riddle_app/templates/: base.html  index.html  navigation.html  new_riddle_form.html  riddle_detail.html  riddle_guess.html  riddle_list.html
